[fix] ハンバーガーメニューを開いた状態で非表示にすると空白の領域が残る不具合を修正

--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -207,7 +207,8 @@
                              Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding SettingsService.System.ShowSideBar, Mode=OneWay}}"
                              IsTabStop="False"
                              ContextMenu="{StaticResource ContextMenu}"
-                             ItemInvoked="HamburgerMenu_ItemInvoked">
+                             IsVisibleChanged="SideContent_IsVisibleChanged"
+                             ItemInvoked="SideContent_ItemInvoked">
                 <i:Interaction.Triggers>
                     <i:PropertyChangedTrigger Binding="{Binding Visibility, ElementName=HamburgerMenu, Mode=OneWay}">
                         <i:ChangePropertyAction TargetName="SideContentColumn" PropertyName="Width" Value="Auto"/>
