--- a/MyPad/Views/Styles/Generic.xaml
+++ b/MyPad/Views/Styles/Generic.xaml
@@ -10,6 +10,7 @@
         <ResourceDictionary Source="./Controls/AvalonEdit.xaml"/>
         <ResourceDictionary Source="./Controls/DiffViewer.xaml"/>
         <ResourceDictionary Source="./Controls/Dragablz.xaml"/>
+        <ResourceDictionary Source="./Controls/LiveCharts.xaml"/>
         <ResourceDictionary Source="./Controls/MarkDig.xaml"/>
         <ResourceDictionary Source="./Controls/ToastNotifications.xaml"/>
     </ResourceDictionary.MergedDictionaries>
