--- a/MyPad/Views/Regions/OptionContentView.xaml
+++ b/MyPad/Views/Regions/OptionContentView.xaml
@@ -208,8 +208,8 @@
                 <Grid ge:GridEx.RowDefinition="Auto, *">
                     <Label    Grid.Row="0" Content="{le:Loc LabelText_SetExplorerRoot}"/>
                     <DataGrid Grid.Row="1" ItemsSource="{Binding ExplorerRoots, Mode=OneWay}" LoadingRow="{qc:QuickEvent '$eventArgs.Row.Header = ($eventArgs.Row.GetIndex() + 1).ToString()'}"
+                              AutoGenerateColumns="False" HeadersVisibility="All" RowHeaderWidth="50" ColumnWidth="*"
                               CanUserResizeRows="False" CanUserResizeColumns="False" CanUserSortColumns="False" CanUserAddRows="True" CanUserDeleteRows="True"
-                              HeadersVisibility="All" RowHeaderWidth="50" ColumnWidth="*" AutoGenerateColumns="False"
                               SelectionUnit="Cell" KeyboardNavigation.ControlTabNavigation="None">
                         <DataGrid.Resources>
                             <!-- 全選択ボタンを置き換える -->
@@ -341,11 +341,6 @@
                                 </Button>
                                 <m:DropDownButton Grid.Row="2" Grid.Column="4" Style="{StaticResource IconDropDownButton}" BorderThickness="0 1 1 1" Height="27">
                                     <m:DropDownButton.Items>
-                                        <MenuItem Command="{Binding ExportLogArchiveCommand, Mode=OneTime}" Header="{le:Loc Command_ExportLog}">
-                                            <MenuItem.Icon>
-                                                <mi:Material Kind="ArchiveArrowDown"/>
-                                            </MenuItem.Icon>
-                                        </MenuItem>
                                         <MenuItem Command="{Binding InitializeSyntaxCommand, Mode=OneTime}" Header="{le:Loc Command_InitializeSyntax}">
                                             <MenuItem.Icon>
                                                 <mi:Material Kind="FileRefreshOutline"/>
