--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
                xmlns:le="http://wpflocalizeextension.codeplex.com"
                xmlns:qc="http://QuickConverter.CodePlex.com/"
                xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf"
-               xmlns:pb="clr-namespace:PushBindingExtension;assembly=WinCopies.PushBinding"
+               xmlns:pb="clr-namespace:WinCopies.Util.Data;assembly=WinCopies.Util.Desktop"
                xmlns:dr="clr-namespace:Dragablz;assembly=Dragablz"
                xmlns:ae="http://icsharpcode.net/sharpdevelop/avalonedit"
                xmlns:s="clr-namespace:System;assembly=System.Runtime"
