--- a/MyPad/Views/Regions/DiffContentView.xaml
+++ b/MyPad/Views/Regions/DiffContentView.xaml
@@ -17,9 +17,15 @@
              IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <Grid Margin="20 0 20 20" ge:GridEx.RowDefinition="*, 5, Auto">
+        <!--
+            NOTE: DiffPlex の OldText, NewText に空文字を設定すると例外が発生する問題への対応
+            DiffPlex.Wpf v1.1.2 以降で確認された。
+            System.InvalidOperationException: Nullable object must have a value. が発生する。
+            IsNullOrEmpty に該当する場合は半角スペースに置き換える。
+        -->
         <dp:DiffViewer x:Name="DiffViewer"
-                       OldText="{Binding DiffSource.Value.Document.Text, Mode=OneWay}"
-                       NewText="{Binding DiffDestination.Value.Document.Text, Mode=OneWay}"
+                       OldText="{qc:Binding 'string.IsNullOrEmpty($P) ? \' \' : $P', P={Binding DiffSource.Value.Document.Text, Mode=OneWay}}"
+                       NewText="{qc:Binding 'string.IsNullOrEmpty($P) ? \' \' : $P', P={Binding DiffDestination.Value.Document.Text, Mode=OneWay}}"
                        OldTextHeader="{qc:MultiBinding 'Path.GetDirectoryName($P0) == Path.GetDirectoryName($P1) ? Path.GetFileName($P0) : $P0', P0={Binding DiffSource.Value.FileName, Mode=OneWay}, P1={Binding DiffDestination.Value.FileName, Mode=OneWay}}"
                        NewTextHeader="{qc:MultiBinding 'Path.GetDirectoryName($P0) == Path.GetDirectoryName($P1) ? Path.GetFileName($P1) : $P1', P0={Binding DiffSource.Value.FileName, Mode=OneWay}, P1={Binding DiffDestination.Value.FileName, Mode=OneWay}}"
                        Opacity="{qc:MultiBinding '$P0 == $P1 ? 0.2 : 1.0', P0={Binding DiffSource.Value.Document.Text, Mode=OneWay}, P1={Binding DiffDestination.Value.Document.Text, Mode=OneWay}}"/>
