--- a/MyPad/Views/Regions/OptionContentView.xaml
+++ b/MyPad/Views/Regions/OptionContentView.xaml
@@ -287,7 +287,7 @@
                 <ScrollViewer>
                     <StackPanel>
                         <GroupBox Header="{le:Loc Label_SystemDirectory}">
-                            <Grid ge:GridEx.ColumnDefinition="Auto, *, 5, Auto, Auto" ge:GridEx.RowDefinition="Auto, Auto, Auto">
+                            <Grid ge:GridEx.ColumnDefinition="Auto, *, 5, Auto" ge:GridEx.RowDefinition="Auto, Auto, Auto">
                                 <Grid.Resources>
                                     <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource Default.TextBox}">
                                         <Setter Property="Margin" Value="5"/>
@@ -305,7 +305,7 @@
                                         <Setter Property="Padding" Value="0"/>
                                         <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"/>
                                     </Style>
-                                    <Style x:Key="IconDropDownButton" TargetType="{x:Type m:DropDownButton}" BasedOn="{StaticResource Default.DropDownButton}">
+                                    <Style x:Key="IconDangerButton" TargetType="{x:Type Button}" BasedOn="{StaticResource Common.DangerButton}">
                                         <Setter Property="Margin" Value="0 5"/>
                                         <Setter Property="Padding" Value="0"/>
                                         <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"/>
@@ -336,18 +336,9 @@
 
                                 <Label   Grid.Row="2" Grid.Column="0" Content="{le:Loc Label_AppDataDirectory}"/>
                                 <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ProductInfo.Roaming, Mode=OneWay}"/>
-                                <Button  Grid.Row="2" Grid.Column="3" Command="{Binding OpenAppDataDirectoryCommand, Mode=OneTime}" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}" BorderThickness="1 1 0 1">
-                                    <mi:Modern Kind="FolderOpen"/>
+                                <Button  Grid.Row="2" Grid.Column="3" Command="{Binding InitializeSyntaxCommand, Mode=OneTime}" ToolTip="{le:Loc Command_InitializeSyntax}" Style="{StaticResource IconDangerButton}">
+                                    <mi:Material Kind="FileRefreshOutline"/>
                                 </Button>
-                                <m:DropDownButton Grid.Row="2" Grid.Column="4" Style="{StaticResource IconDropDownButton}" BorderThickness="0 1 1 1" Height="27">
-                                    <m:DropDownButton.Items>
-                                        <MenuItem Command="{Binding InitializeSyntaxCommand, Mode=OneTime}" Header="{le:Loc Command_InitializeSyntax}">
-                                            <MenuItem.Icon>
-                                                <mi:Material Kind="FileRefreshOutline"/>
-                                            </MenuItem.Icon>
-                                        </MenuItem>
-                                    </m:DropDownButton.Items>
-                                </m:DropDownButton>
                             </Grid>
                         </GroupBox>
 
